tests/baselines/reference/unusedClassesinNamespace5.errors.txt
tests/cases/compiler/unusedClassesinNamespace5.ts(11,11): error TS6133: Variable 'c3' has never been used.


==== tests/cases/compiler/unusedClassesinNamespace5.ts (1 errors) ====
    
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 {
              ~~
!!! error TS6133: Variable 'c3' has never been used.
            public x: c1;
        }
    }